--- a/sass/_gallery.scss
+++ b/sass/_gallery.scss
@@ -34,7 +34,7 @@
     position: absolute;
     top: 50%;
     right: 1.6rem;
-    z-index: 1000;
+    z-index: 3000;
     transform: translate(0, -50%);
   }
 
@@ -63,6 +63,13 @@
     &--6 {
       grid-area: pic6;
       margin: 0.5rem 0 0 0.5rem;
+    }
+
+    &-like {
+      position: absolute;
+      top: 2rem;
+      right: 2rem;
+      opacity: 0;
     }
 
     &-img {
@@ -98,12 +105,6 @@
 
       &-btn {
       }
-
-      &-like {
-        position: absolute;
-        top: 2rem;
-        right: 2rem;
-      }
     }
   }
 }
@@ -112,4 +113,9 @@
 .gallery__item:hover > .gallery__item-caption {
   opacity: 1;
   height: 100%;
+}
+
+.gallery__item:hover > .gallery__item-like {
+  opacity: 1;
+  z-index: 100;
 }
