--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -20,7 +20,7 @@
   transition: all 0.3s;
 
   &:focus-within {
-    transform: translateY(-2px);
+    transform: translateY(-2px) scaleX(1.05);
     box-shadow: 0 0.7rem 3rem rgba($color-grey-light, 0.125);
   }
 
