--- a/sass/_search-results.scss
+++ b/sass/_search-results.scss
@@ -15,7 +15,7 @@
 
     &-btn {
       position: absolute;
-      z-index: 1100;
+      z-index: 4000;
       &--previous {
         top: 50%;
         left: 1.6rem;
